--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 *.webp filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 .mp3 filter=lfs diff=lfs merge=lfs -text
+myfile filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
 *.mp3 filter=lfs diff=lfs merge=lfs -text
 *.myfile filter=lfs diff=lfs merge=lfs -text
